[gd_scene load_steps=5 format=2]

[ext_resource path="res://spatial_world_storage.gd" type="Script" id=1]
[ext_resource path="res://notepad3d_visualizer.gd" type="Script" id=2]
[ext_resource path="res://spatial_notepad_integration.gd" type="Script" id=3]
[ext_resource path="res://akashic_notepad_controller.gd" type="Script" id=4]

[node name="AkashicNotepadSystem" type="Spatial"]

[node name="SpatialWorldStorage" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AkashicController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Integration" type="Node" parent="."]
script = ExtResource( 3 )

[node name="VisualizationContainer" type="Spatial" parent="."]

[node name="Notepad3DVisualizer" type="Spatial" parent="VisualizationContainer"]
script = ExtResource( 2 )

[node name="VisualizationCamera" type="Camera" parent="VisualizationContainer"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 10 )

[node name="MainLight" type="DirectionalLight" parent="VisualizationContainer"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0 )
shadow_enabled = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DimensionLabel" type="Label" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 70.0
text = "Dimension: Î³ (3D)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="UI"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 60.0
margin_right = -20.0
margin_bottom = 90.0
text = "Akashic Records: 0 | Notepad Cells: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpText" type="Label" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -40.0
margin_right = -20.0
margin_bottom = -10.0
text = "WASD = Move | Q/E = Up/Down | Right-click + Drag = Rotate | Mouse Wheel = Zoom"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}